2002-02-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkText.c (ConfigureText): reenable the blinking cursor
	on state change where necessary. [Bug #503772]

	* tests/listbox.test:
	* generic/tkListbox.c: corrected error handling when setting to an
	invalid listvar value. [Bug #503613]

2002-02-18  Don Porter  <dgp@users.sourceforge.net>

	* changes: First draft of updates to changes for 8.3.5.

2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkCmds.c (Tk_TkObjCmd): don't use 'bool' as an arg as it
	conflicts with the C99 spec. [Bug #511956] (ingham)

2002-01-31  Todd Helfter <tmh@users.sourceforge.net>
	* generic/tkMenu.c (ConfigureMenuCloneEntries)
	* tests/menu.test (menu3.68)
	Correct and test for logic error when cloning menus. [Bug 508988]

2002-01-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkBind.c (TkBindFree):
        * generic/tkGrid.c (Tk_GridCmd,ResolveConstraints,CheckSlotData,
	DestroyGrid):
        * generic/tkSelect.c (Tk_DeleteSelHandler,TkSelDeadWindow): Replaced
        Tcl_Free calls with ckfree so that memory debugging is fully supported.

2001-12-18  Don Porter  <dgp@users.sourceforge.net>

	* tests/event.test (event-click-drag-1.2): Corrected test that
	failed on Solaris/CDE due to text scrolling.  [Bug 413735]

2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	************************
	****  8.3.4 TAGGED  ****
	************************

	* unix/configure: regend
	* unix/tcl.m4: added -lc to LIBS on AIX and corrected location of
	ldAix.

2001-10-19  Daniel Steffen <das@users.sourceforge.net>

	* generic/tkConsole.c:
	* library/console.tcl:
	* mac/tkMacInit.c:
	* mac/tkMacResource.r: corrected how mac deals with tcl library
	files present both in resources and in $tk_library directory.
	
2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tk.tcl: added tk::GetSelection from 8.4 for console.

	* library/console.tcl: fixed a few errors where namespace command