@@ -4,7 +4,7 @@
 # can be used by non-unix systems that do not have built-in support
 # for shells.
 #
-# RCS: @(#) $Id: console.tcl,v 1.8.2.4 2001/10/19 19:40:17 das Exp $
+# RCS: @(#) $Id: console.tcl,v 1.8.2.5 2002/03/01 00:03:57 dgp Exp $
 #
 # Copyright (c) 1998-1999 Scriptics Corp.
 # Copyright (c) 1995-1997 Sun Microsystems, Inc.
@@ -285,8 +285,10 @@ proc tkConsoleBind {w} {
 
     ## Get all Text bindings into Console
     foreach ev [bind Text] { bind Console $ev [bind Text $ev] }	
-    ## We really didn't want the newline insertion
+    ## We really didn't want the newline insertion...
     bind Console <Control-Key-o> {}
+    ## ...or any Control-v binding (would block <<Paste>>)
+    bind Console <Control-Key-v> {}
 
     # For the moment, transpose isn't enabled until the console
     # gets and overhaul of how it handles input -- hobbs
